# nineties

./: .env.e2e  .env.example  .env.test  .gitignore  CONVENTIONS.md  Cargo.toml  Dockerfile  Makefile  PLAN.md  README.md  Readme.md  adjust-include-back.sh  adjust-include.sh  build.rs  diesel.toml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  prepare-environment.sh  tailwind.config.js  todo.md  tsconfig.json  vite.config.js  wip.md
.github/workflows/: ci.yml  release.yml  security.yml  tests.yml
crates/arc-app/: Cargo.toml
crates/arc-app/src/: main.rs  schema.rs
crates/arc-app/src/commands/: develop.rs  seed.rs  serve.rs
crates/arc-app/src/database/seeders/: create_users.rs
crates/arc-app/src/domain/user/: aggregate.rs  commands.rs  mod.rs  projector.rs
crates/arc-app/src/helpers/: access_log.rs  audit_context.rs  config.rs  database.rs  es_stack.rs  general.rs  session.rs  template.rs  test.rs
crates/arc-app/src/http/: errors.rs
crates/arc-app/src/http/controllers/: admin_controller.rs  api_controller.rs  auth_controller.rs  diag_controller.rs
crates/arc-app/src/http/middlewares/: jwt_middleware.rs
crates/arc-app/src/resources/js/controllers/: dark_mode_controller.js  dropdown_controller.js  notification_controller.js  password_form_controller.js  profile_form_controller.js  session_notification_controller.js
crates/arc-app/src/resources/views/admin/: index.html  signin-form.html
crates/arc-app/src/resources/views/admin/parts/: side-menu.html
crates/arc-app/src/resources/views/parts/: footer.html  header.html  hero.html  html-head.html  open-graph.html
crates/arc-app/src/services/: user_service.rs
crates/arc-app/src/validation/: mod.rs
crates/arc-app/src/websocket/: connection.rs  server.rs  turbo_stream.rs
crates/arc-core/: ARCHITECTURE.md  Cargo.toml  DX_GUIDELINES.md  DX_REVIEW_FEEDBACK.md  README.md
crates/arc-core/src/: access_log.rs  aggregate.rs  audit.rs  command_bus.rs  event.rs  event_bus.rs  event_store.rs  integrity.rs  lib.rs  projection.rs  read_model_store.rs  session.rs
crates/arc-es-sqlite/: Cargo.toml  README.md
crates/arc-es-sqlite/src/: lib.rs  read_model_store.rs  session.rs
crates/nineties-app/: Cargo.toml
crates/nineties-app/src/: main.rs  routes.rs  schema.rs
crates/nineties-app/src/commands/: develop.rs  migrate.rs  seed.rs  serve.rs
crates/nineties-app/src/database/seeders/: create_users.rs
crates/nineties-app/src/database/seeders/traits/: seeder.rs
crates/nineties-app/src/domain/user/: aggregate.rs  commands.rs  events.rs  projector.rs
crates/nineties-app/src/helpers/: access_log.rs  audit_context.rs  database.rs  es_stack.rs  form.rs  jwt.rs  rate_limit.rs  session.rs  template.rs  test.rs
crates/nineties-app/src/http/: errors.rs
crates/nineties-app/src/http/controllers/: admin_controller.rs  api_controller.rs  auth_controller.rs  diag_controller.rs  home_controller.rs
crates/nineties-app/src/http/middlewares/: auth_middleware.rs  idle_timeout_middleware.rs  jwt_middleware.rs  rate_limit_middleware.rs
crates/nineties-app/src/models/: user.rs
crates/nineties-app/src/resources/js/controllers/: active_link_controller.js  websocket_controller.js
crates/nineties-app/src/resources/views/: signin.html
crates/nineties-app/src/resources/views/admin/pages/: profile.html
crates/nineties-app/src/resources/views/admin/parts/: side-menu.html
crates/nineties-app/src/resources/views/parts/: html-head.html  notification.html  open-graph.html
crates/nineties-app/src/services/: user_service.rs
crates/nineties-app/src/validation/: mod.rs  user_validation.rs
crates/nineties-app/src/websocket/: connection.rs  mod.rs  server.rs  turbo_stream.rs
crates/nineties-core/: ARCHITECTURE.md  Cargo.toml  DX_GUIDELINES.md  DX_REVIEW_FEEDBACK.md  README.md
crates/nineties-es-sqlite/: Cargo.toml  README.md
docs/: 01-overview.md  02-architecture.md  03-backend.md  04-frontend.md  05-database.md  06-testing.md  07-api-reference.md  08-problems-and-improvements.md  09-event-sourcing-architecture.md  10-event-sourcing-implementation-guide.md  11-event-sourcing-api-reference.md  ARCHITECTURE_DIAGRAM_UPDATE.md  CLAUDE.md  COMPILATION_FIX_RATE_LIMIT_MIDDLEWARE.md  DIAGRAM_CONVERSION_SUMMARY.md  DOCUMENTATION_ORGANIZATION_SUMMARY.md  README.md  RELEASE_PROCESS.md  SESSION_CONFIGURATION.md  _coverpage.md  _sidebar.md  index.html  roadmap.md
docs/analysis/: README.md  performance.md
docs/ark/: refactor-plan.md
docs/dev-notes/: README.md  organization-plan.md  prompt-notes.md
docs/guides/: access-logging.md  audit-metadata.md  idle-timeout.md  integrity-chain.md  session-revocation.md
docs/implementation/: README.md  event-sourcing-core.md  multi-agent-summary.md  progress-report.md  (+1 more)
scripts/: benchmark.sh  install_tailwind.sh  new-aggregate.sh
src/: main.rs  routes.rs  schema.rs
stubs/: .env.example  .gitignore  Cargo.toml  diesel.toml  helpers.rs.stub  main.rs.stub  package-lock.json  package.json  routes.rs.stub  vite.config.js
stubs/controllers/: controller.rs.stub
stubs/migrations/2024-12-16-134059_create_users/: up.sql
stubs/resources/views/: home.html.stub
stubs/root/: package.json.stub
stubs/src/: helpers.rs  main.rs  routes.rs
stubs/src/console/: development.rs
stubs/src/database/seeders/: create_users.rs
stubs/src/database/seeders/traits/: seeder.rs
stubs/src/helpers/: database.rs  form.rs  general.rs  session.rs  template.rs
stubs/src/http/controllers/: admin_controller.rs  auth_controller.rs  home_controller.rs
stubs/src/http/middlewares/: auth_middleware.rs
stubs/src/models/: user.rs
stubs/src/resources/js/: script.js
stubs/src/resources/views/: signin.html
stubs/src/resources/views/admin/: dashboard.html  index.html  settings.html  signin-form.html
stubs/src/resources/views/admin/pages/: profile.html
stubs/src/resources/views/admin/parts/: side-menu.html  top-menu.html
stubs/src/resources/views/parts/: footer.html  header.html  hero.html  html-head.html  notification.html
stubs/src/services/: user_service.rs
(+95 files in other folders)
