[package]
name = "nineties"
version = "0.0.7"
edition = "2021"
authors = ["Savio Resende <savio@savioresende.com>"]
description = "An app starter for traditional web apps."
license = "MIT"
repository = "https://github.com/lotharthesavior/nineties"
include = [
    "stubs/**",
    "src/**",
    "Cargo.toml",
    "Readme.md"
]

[[bin]]
name = "nineties"
path = "src/main.rs"

[dependencies]
include_dir = "0.7.4"