[package]
name = "nineties"
version = "0.1.3"
edition = "2021"
authors = ["Savio Resende <savio@savioresende.com>"]
description = "An app starter for traditional web apps."
license = "MIT"
repository = "https://github.com/lotharthesavior/nineties"
include = [
    "stubs/**",
    "src/**",
    "Cargo.toml",
    "README.md"
]

[[bin]]
name = "nineties"
path = "src/main.rs"

[dependencies]
dotenv = "0.15.0"
include_dir = "0.7.4"