[workspace]
resolver = "2"
members = [
    "crates/nineties-core",
    "crates/nineties-es-sqlite",
    "crates/nineties-app",
]

[workspace.package]
version = "0.2.2"
edition = "2021"
authors = ["Savio Resende <savio@savioresende.com>"]
license = "MIT"
repository = "https://github.com/lotharthesavior/nineties"

[workspace.dependencies]
# Core event sourcing dependencies
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"

# Web framework
actix-web = "4"
actix-files = "0.6.6"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-limitation = "0.5"
actix-web-actors = "4.3"
actix = "0.13"
actix-web-lab = "0.22"
tracing-actix-web = "0.7"

# Database
diesel = { version = "2.2.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
diesel_migrations = "2.2.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Templating and web utilities
tera = "1.20.0"
urlencoding = "2.1.0"

# Security
jsonwebtoken = "9"
argon2 = "0.5.3"
validator = { version = "0.18", features = ["derive"] }

# Utilities
dotenv = "0.15.0"
fs_extra = "1.3.0"
rand = "0.8"
once_cell = "1.19"
md5 = "0.7"
chrono = "0.4"

# Dev dependencies
serial_test = "2.0"
