[package]
name = "nineties"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
dotenv = "0.15.0"
tera = "1.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
urlencoding = "2.1.0"
argon2 = "0.5.3"
futures = "0.3.31"
futures-util = "0.3.31"
tokio = {  version = "1.42.0", features = ["rt", "macros", "process"] }
fs_extra = "1.3.0"
diesel = { version = "2.2.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.2.0"
